# GHermeneus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: codeql-analysis.yml
GHermeneus/: CMakeLists.txt
GHermeneus/include/GHermeneus/: GCode.h  GHermeneus.h  Instruction.h  Machine.h  Parameters.h  Primitive.h  State.h  StateSpaceVector.h  Translator.h
GHermeneus/include/GHermeneus/Dialects/: Marlin.h
GHermeneus/include/GHermeneus/Utils/: Concepts.h  ConstexprMap.h  cassert.h
GHermeneus/src/: GCode.cpp  Instruction.cpp  Machine.cpp  State.cpp  Translator.cpp
GHermeneus/src/Dialects/: Marlin.cpp
benchmark/: CMakeLists.txt  bm_machine.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  StaticAnalyzers.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
tests/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp  machine_test.cpp  state_test.cpp  tests.cpp  tests_machine.cpp  tests_primitive.cpp
